improvements to remove/delete ui

--- a/lang/en.yml
+++ b/lang/en.yml
@@ -1,8 +1,9 @@
 en:
   Dropzone:
     ATTACHFILESHERE_OR: "Attach files by dropping them in here, or"
+    ATTACHFILEHERE_OF: "Attach a file by dropping it in here, or"
     BROWSEYOURCOMPUTER: "browse your computer"
     UPLOADFILES: "Upload file(s)"
     NOTSUPPORTED: "Your browser does not support HTML5 uploads. Please update to a newer version."
-    DETACHFILE: "Detach file"
-    MARKFORDELETION: "Mark for deletion"
+    DETACHFILE: "remove"
+    MARKFORDELETION: "delete"
